<?xml version="1.0"?>
<package>
  <name>arrow_marker</name>
  <version>0.10.1</version>
  <description>The visulalization_marker_tutorials package</description>

  <maintainer email="mostafa.gomaa@rwth-aachen.de">Mostafa Gomaa</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/visualization_marker_tutorials</url>

  <author>Josh Faust</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
